# classifications-ui

./: Dockerfile  README.md  package-lock.json  package.json  setup.cfg  wsgi.py
scripts/: load_templates.sh
src/aims_ui/models/: get_endpoints.py
src/aims_ui/templates/aims_ui_pages/: 0-base_page_settings.html
src/aims_ui/templates/custom_multiple_match_nav/: _macro.njk
src/cims_ui/: __init__.py  page_address_info.py  page_error.py
src/cims_ui/config/: base.py  dev.py
src/cims_ui/models/: address.py  get_endpoints.py  get_fields.py  short_address.py
src/cims_ui/models/utilities/: classifications.py  sibling_lookup.py
src/cims_ui/page_controllers/a_single_entry/: page_postcode.py  page_singlesearch.py  page_typeahead.py  page_uprn.py
src/cims_ui/page_controllers/b_multiple_entries/: page_multiple_entries.py  page_multiple_entries_original.py  page_multiple_entries_results.py  page_uprn_multiple_entries.py
src/cims_ui/page_controllers/c_help_pages/: page_help.py
src/cims_ui/page_controllers/d_misc_functionality/: download_handler.py  page_custom_response.py  page_info.py  page_settings.py
src/cims_ui/page_controllers/e_redirect_routes/: login.py  signout.py
src/cims_ui/page_helpers/: classification_utilities.py  cookie_utils.py  google_utils.py  pages_location_utils.py  security_utils.py
src/cims_ui/page_helpers/api/: api_helpers.py  api_interaction.py
src/cims_ui/templates/cims_ui_pages/: 0-base_page_settings.html  address_info.html  error.html
tests/pytest_tests/: test_aims_ui.py
tests/pytest_tests/aims_ui/config/: test_base.py
(+30 files in other folders)
