[metadata]
name = cims_ui
version = 0.0.1
author = ONSDigital
description = Classification Index Matching Service - UI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ONSdigital/classifications-ui
project_urls =
    Bug Tracker = https://github.com/ONSdigital/classifications-ui/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[yapf]
based_on_style = pep8
spaces_before_comment = 2
